force-app/main/default/objects/QCI_Register__c/QCI_Register__c.object-meta.xml
<CustomObject>
    <description>This is to replace the MS Access based register used for QCI creation requests.</description>
    <label>QCI Register</label>
    <nameField>
        <displayFormat>QCI-{00000}</displayFormat>
        <label>QCI Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QCI Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>