force-app/main/default/objects/QCI_Register__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prism Detail</label>
    <referenceTo>Prism_Information__c</referenceTo>
    <relationshipLabel>QCI Register</relationshipLabel>
    <relationshipName>QCI_Register</relationshipName>
    <type>Lookup</type>
</CustomField>