force-app/main/default/objects/QCI_Register__c/fields/Date_for_trigger__c.field-meta.xml
<CustomField>
    <fullName>Date_for_trigger__c</fullName>
    <formula>CASE(MOD(DATEVALUE( LastModifiedDate ) - DATE( 1900, 1, 7 ), 7 ),
1, DATEVALUE(LastModifiedDate) + 2 + 3,
2, DATEVALUE(LastModifiedDate) + 2 + 3,
3, DATEVALUE(LastModifiedDate) + 2 + 3,
4, DATEVALUE(LastModifiedDate) + 2 + 3,
5, DATEVALUE(LastModifiedDate) + 2 + 3,
6, DATEVALUE(LastModifiedDate) + 1 + 3,
DATEVALUE(LastModifiedDate) + 3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date System</label>
    <type>Date</type>
</CustomField>