force-app/main/default/objects/QCI_Register__c/fields/Date_QCI_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_QCI_Created__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date QCI Created</label>
    <type>Date</type>
</CustomField>