force-app/main/default/objects/QCI_Register__c/fields/Date_QCI_Operational__c.field-meta.xml
<CustomField>
    <fullName>Date_QCI_Operational__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date QCI Operational</label>
    <type>Date</type>
</CustomField>