force-app/main/default/objects/QCI_Register__c/fields/QDM_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>QDM_Company_ID__c</fullName>
    <description>Company ID from Prism system</description>
    <inlineHelpText>Company ID from Prism system</inlineHelpText>
    <label>QDM Company ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>