force-app/main/default/objects/QCI_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QCI__c</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Travel_Manager__c</columns>
    <columns>Used__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date_for_trigger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>