force-app/main/default/objects/QCI_Register__c/listViews/Restricted_QCI_s.listView-meta.xml
<ListView>
    <fullName>Restricted_QCI_s</fullName>
    <columns>QCI__c</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Travel_Manager__c</columns>
    <columns>Used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>Cannot be used for allocation</value>
    </filters>
    <label>Restricted QCI&apos;s</label>
</ListView>