force-app/main/default/objects/QCI_Register__c/listViews/Unused.listView-meta.xml
<ListView>
    <fullName>Unused</fullName>
    <columns>NAME</columns>
    <columns>QCI__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Travel_Manager__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Used__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unused</label>
</ListView>